CHATS_SIT/force-app/main/default/objects/Policy_Object__mdt.object
<CustomObject>
    <description>This metadata is used to store mappings to create policy records from county plan &amp; county rate records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_API_Name__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conversion Object Mapping</label>
    <pluralLabel>Conversion Object Mappings</pluralLabel>
</CustomObject>